<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DisplaySearchFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/displaySearchTextView"
                android:text="@string/search_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36dp"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/MapviewSwitch"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/colorMainFont"
                android:text="@string/mapview_label" />

            <Spinner
                android:id="@+id/sortOptionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSubAccent"
                android:popupBackground="@color/colorSubAccent"
                android:spinnerMode="dropdown"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:entries="@array/search_sort_option_spinner"/>

            <ListView
                android:id="@+id/searchresultList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/colorMainFont"
                android:background="@color/colorAccent"
                />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
