...
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="username"
                    android:id="@+id/usernameText"
                    android:layout_alignBottom="@+id/username_label"
                    android:layout_toRightOf="@+id/username_label"
                    android:layout_toEndOf="@+id/username_label"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
...
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="licenseID"
                    android:id="@+id/licenseIDText"
                    android:layout_alignBottom="@+id/licenseID_label"
                    android:layout_toRightOf="@+id/licenseID_label"
                    android:layout_toEndOf="@+id/licenseID_label"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
...
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="license plate num"
                    android:id="@+id/licenseplateText"
                    android:layout_alignBottom="@+id/licensePlate_label"
                    android:layout_toRightOf="@+id/licensePlate_label"
                    android:layout_toEndOf="@+id/licensePlate_label"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
...
